--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -9,6 +9,12 @@ architectury {
     fabric()
 }
 
+fabricApi {
+    configureDataGeneration() {
+        client = true
+    }
+}
+
 loom {
     accessWidenerPath = project(":common").loom.accessWidenerPath
 }
