feat(core): Sheep

--- a/common/src/main/resources/data/minecraft/tags/entity_type/powder_snow_walkable_mobs.json
+++ b/common/src/main/resources/data/minecraft/tags/entity_type/powder_snow_walkable_mobs.json
@@ -1,6 +1,7 @@
 {
   "replace": false,
   "values": [
-    "alpinewhisprs:reindeer"
+    "alpinewhispers:reindeer",
+    "alpinewhispers:alpine_sheep"
   ]
 }
